# eruka-mcp

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: config.toml
docs/content/: _index.md
docs/templates/: index.html
src/: auth.rs  client.rs  main.rs  server.rs  tests_integration.rs  tools.rs
